<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">spcs</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_test1">OK</string>
    <string name="edt_userId">USER ID</string>
    <string name="edt_url">http://url</string>
    <string name="edt_passwd">PASSWORD</string>
    <string name="pgr_start">Start</string>
    <string name="button3">UrlTest</string>
    <string name="title_activity_url_test">UrlTestActivity</string>
    <string name="txtview_result"></string>
    <string name="logo">Logo</string>
    <string name="mystory">MyStory</string>
    <string name="mymuseum">MyMuseum</string>
    <string name="btnmuseum">Museum</string>
    <string name="nist_button_text">Show NIST Time</string>
    <string name="ftp_server_prompt">FTP Server:&#160;</string>
    <string name="ftp_button_text">Show Welcome Message</string>
    <string name="url_prompt">URL:&#160;</string>
    <string name="url_checker_button_text">Check URL</string>
    <string name="search_string_prompt">Search String:&#160;</string>
    <string name="base_url_prompt">Base URL:&#160;&#160;</string>
    <string name="base_url_default">http://apps.coreservlets.com/NetworkingSupport/loan-calculator</string>
    <string name="loan_amount_prompt">Loan amount:&#160;&#160;</string>
    <string name="interest_rate_prompt">Interest rate:&#160;&#160;</string>
    <string name="loan_period_prompt">Months:&#160;&#160;</string>
    <string name="loan_button_text">Calculate Payments</string>
    <string name="monthly_payment_prompt">Monthly payment:&#160;&#160;</string>
    <string name="total_payments_prompt">Total payments:&#160;&#160;</string>
    <string name="title_activity_list_my_story">ListMyStoryActivity</string>
    <string name="title_activity_list_story">ListStoryActivity</string>
    <string name="title_activity_list_my_museum">ListMyMuseumActivity</string>
    <string name="file_key">com.mm.mymuseum.user.security</string>

</resources>