<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UrlTestActivity" >

    <EditText
        android:id="@+id/urlText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edt_url"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/urlbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getUrlTest"
        android:text="@string/button3" />

    <TextView
        android:id="@+id/txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/urlbutton"
        android:gravity="right"
        android:text="@string/txtview_result" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </ListView>

    <ImageView
        android:id="@+id/imageAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="212dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo" />

</LinearLayout>